css/main.css
body {
  font-family: Helvetica, sans-serif;
}

a {
    color: #444444;
    text-decoration: none;
}

#main {
  min-width: 556px;
  width: 556px;
  min-height: 380px;
  height: 380px;

  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: hidden;
}


.label.label-success {
    background-color: #5e659d;
    margin-left: 4px;
}

.clear {
  clear: both;
}

#spinner {
    width: 40px;
    position: relative;
    margin-left: auto;
    margin-right: auto;
    z-index: 999;
    margin-top: 40%;
}

#loading-mask {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;

    height: 100%;
    background-color: white;
    z-index: 700;
}

.elapsed-time-unit {
    display: inline-block;
}

#alert-container {
    z-index: 999;
    position: absolute;
    width: 100%;
    text-align: center;
}

#alert-confirm {
    overflow: auto;
}

.alert-confirm-option {
    display: inline-block;
    margin-right: 10px;
    margin-left: 10px;
    cursor: pointer;
    border: 2px solid grey;
    border-radius: 4px;
    padding: 4px;
    width: 100px;
}

#alert-content {
    margin-top: 25%;
    padding: 20px;
}

.header {
    width: 100%;
    overflow: hidden;
    height: 45px;
    padding: 10px;
    position: fixed;
    top: 0px;
    left: 0px;
    border: 1px solid #bcbcbc !important;
    background: -webkit-linear-gradient(top, #ffffff 0%,#f7f7f7 100%);
}

#header-banner {
    float: left;
}


.header-icon {
    margin-left: 15px;
    float: right;
}


.header-item {
    cursor: pointer;
    position: absolute;
    left: 466px;
    top: 12px;
    width: 70px;
}


#back-to-homepage {   
    width: 160px;
    height: 28px;
    top: 9px;
    text-align: center;
    line-height: 12px;
    font-size: 12px;
    left: 352px;
    background: #ffffff;
    position: absolute;
}

.feedback-link {
    position: absolute;
    left: 18px;
    bottom: 10px;
    text-decoration: underline;
    font-weight: bold;
}

.feedback-link a {
    color: #444444;
}

.total-hours-log {
    float: right;
    margin-right: 20px;
    margin-top: 60px;
    margin-bottom: 12px;
}

.total-hours-log a {
    text-decoration: underline;
}

.time-entry-container {
    display: inline-block;
    vertical-align: top;
    margin-left: 0px;
    height: 65px;    
}

a.dropdown-toggle.ng-scope {
    height: 32px;
    width: 520px;
    margin-left: 18px;
    background: -webkit-linear-gradient(top, #ffffff 0%,#f7f7f7 100%);
/*    background: -webkit-linear-gradient(top, #fafafa 0%,#ebebeb 100%);*/
    border: 1px solid #bcbcbc;
    border-radius: 3px;
    color: #444444;
}

a.dropdown-toggle.ng-scope:focus, #task-dropdown:focus {
    border: 2px solid #A5C7FE !important;
    border-radius: 2px;
}

.custom-select > .dropdown-menu {
    width: 520px;
    max-width: 520px;
    min-width: 520px;
    margin-left: 18px;
    margin-top: -32px;
}

.custom-select > .dropdown-menu > ul > li > a:hover {
    background: #337ab7;
}

.dropdown-menu.ng-scope {
    width: 520px;
    max-width: 520px;
}

#notes-field {
    display: inline-block;
    float: left;
    width: 390px;
    max-width: 390px;
    height: 65px;
    max-height: 65px;
    margin-left: 18px;
    margin-top: 0px;
    margin-right: 15px;
    border: 1px solid #bcbcbc;
    border-radius: 1px;
    resize: none;
}

.time-entry-item {
    display: inline-block;
/*    float: right;*/
    clear: both;
    margin-bottom: 20px;
    margin-left: 0px;

}

.time-entry-form-input {
    height: 65px;
    font-size: 38px;
    text-align: right;
    float: left;
    clear: both;
    border: 1px solid #bcbcbc;
    border-radius: 1px;
}

#time-entry-form-start, #time-entry-form-end {
    width: 130px;
    font-size: 23px;
    border:  1px solid #bcbcbc;
    padding: 0 0 0 8px;
    margin-right: 2px;
}

input[type="text"].time-entry-form-hours {
    padding-right: 6px;
}


.time-entry-form-input::-webkit-input-placeholder {
    padding-right: 6px;
    color: #c4c4c4;
}

#time-entry-item-start::-webkit-input-placeholder, #time-entry-item-end::-webkit-input-placeholder {
    padding-right: 0;
}

/*input, textarea {
    padding-right: 6px;
}*/

.notes-field-container {
    display: inline-block;
    margin-bottom: 20px;
}

.fieldtitle {
    margin-left: 18px;
    margin-top: 10px;
    margin-bottom: 0px;
}

.fieldtitle.time-entry, #time-entry-form-end-title, #time-entry-field-hours-title, #field-title-timer {
    margin-left: 0px;
}

.settings-controls .tooltip > .tooltip-inner {
    background-color: #444444; 
    color: #FFFFFF; 
    border: 1px solid #444444; 
    max-width: 1000px;
    height: 22px;
    font-size: 11px;
}

#filler {
    float: right;
    width: 250px;
    padding-top: 50px;
    padding-bottom: 50px;
    font-size: x-small;
}


.btn-success:hover {
    background-color: #38aa67;
    border-color: #339d5e;
}


.btn-danger:hover {
    background-color: #38aa67 !important;
    border-color: #339d5e !important;
    border: 1px solid #339d5e !important;
    text-align: center !important;
}

.btn-danger {
    background-color: #38aa67;
    border-color: #339d5e;
    border: 1px solid #339d5e;
    text-align: center !important;
}

.btn-group>.btn.active {
    background-color: #d4d4d4;
    border: 1px solid #bcbcbc !important;
    text-align: center;
}

.modal-footer .btn.btn-default {
    margin-left: 12px;
    font-size: 16px;
    font-weight: 500;
    color: #444444;
    border: 1px solid #bcbcbc !important;
    background: -webkit-linear-gradient(top, #ffffff 0%,#f7f7f7 100%);
  
}

.settings-column {
    display: inline-block;
    vertical-align: top;
    width: 276px;
}

.settings-column a {
    text-decoration: none;
}

.settings-btn {
    display: block;
    width: 250px;
}

.icon-group {
    margin-bottom: 50px;
    text-align: left;
}

.settings-width {
    width: 235px;
}

#bottom-button-bar {
    margin-top: 30px;
}
/* ... */

